--- a/currency-converter/public/index.html
+++ b/currency-converter/public/index.html
@@ -29,7 +29,7 @@
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     
       <div class="progress">
-        <div class="determinate"></div>
+        <div class="determinate" style="color: red"></div>
       </div>  
     </div>
     
