Refactor front end code

--- a/currency-converter/public/index.html
+++ b/currency-converter/public/index.html
@@ -74,7 +74,7 @@
 
           <div class="row center">
               <a href="#" id="convert-button" class="btn-large waves-effect waves-light blue">Convert!</a>
-              <a href="rates.html" class="btn-large waves-effect waves-light red">See Rates</a>
+              <a href="/rates" class="btn-large waves-effect waves-light red">See Rates</a>
           </div>  
         </form>
       </div>
